@@ -7,27 +7,34 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class SamePathsContainer {
-    private final List<RPPath> paths = new ArrayList<>();
-    public SamePathsContainer(@NotNull RPPath rpPathA, @NotNull RPPath rpPathB){
+    private final List<RpPath> paths = new ArrayList<>();
+    public SamePathsContainer(@NotNull RpPath rpPathA, @NotNull RpPath rpPathB){
         Preconditions.checkArgument(rpPathA.isSame(rpPathB), "Paths are not same!");
         paths.add(rpPathA);
         paths.add(rpPathB);
     }
 
-    public boolean canAdd(@NotNull RPPath rpPath){
-        return paths.get(0).isSame(rpPath) && !paths.contains(rpPath);
+    public boolean canAdd(@NotNull RpPath rpPath){
+        return paths.getFirst().isSame(rpPath);
     }
 
-    public void add(@NotNull RPPath rpPath){
-        if (!canAdd(rpPath)) return;
+    public void add(@NotNull RpPath rpPath){
+        Preconditions.checkArgument(canAdd(rpPath), "Can not add " + rpPath + " to container with sames: " + this);
         paths.add(rpPath);
     }
 
-    public List<RPPath> getAll(){
+    public @NotNull List<RpPath> getAll(){
         return new ArrayList<>(paths);
     }
 
-    public @NotNull RPPath getExample(){
-        return paths.get(0);
+    public @NotNull RpPath getExample(){
+        return paths.getFirst();
+    }
+
+    @Override
+    public String toString() {
+        return "SamePathsContainer{" +
+                "paths=" + paths +
+                '}';
     }
 }
